Fixed rendering on chrome; use display instead of visibility to hide. Smaller font on recur on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -130,7 +130,8 @@ img {
 
 @media (max-width : 800px) {
     .hide-on-mobile {
-        visibility: collapse;
+        /*visibility: collapse;*/
+        display: none;
     }
 }
 
@@ -297,5 +298,11 @@ img {
         flex-direction: column;
         padding-left: 40px;
         padding-right: 40px;
+    }
+}
+
+@media (max-width : 800px) {
+    .recur-item {
+        font-size: 0.8em;
     }
 }
